2007-06-07 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/*.[ch], sim/ucsim/configure, sim/ucsim/configure.in:
	  permanent solution to suppress GCC 4.2.0 c++ warning:
	  deprecated conversion from string constant to `char *'
	  use 'const char *' where ever required
	* support/regression/generate-cases.py: implemented more flexible rule
	  for detection of testing functions, allowing white-spaces surrounding
	  the function name and the 'void' parameter.
	* support/regression/tests/constantRange.c,
	  support/regression/tests/scott-compare3.c: fixed failing regression
	  tests, uncovered by implementation of more flexible rule for detection
	  of testing functions

2007-06-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(decorateType): better optimize '!!' and comparisons

2007-06-04 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, config_vc.awk: sdcc version number is now
	  stored in configure.in; removed .version
	* configure.in, configure, sdcc.spec, doc/sdccman.lyx, doc/sdccman.lyx,
	  doc/INSTALL.txt: version bumped to 2.7.2
	* sim/ucsim/configure.in, sim/ucsim/configure:
	  use "read" to read from .version

2007-06-03 Borut Razem <borut.razem AT siol.net>

	* */Makefile.in: removed annoying warning:
	  Makefile:xx: Makefile.dep: No such file or directory

2007-06-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (outBitC, genRet): used IS_OP_RUONLY,
	  (genNot, genXor): used toCarry, also fixes a bug for c = bit ^ val
	* src/mcs51/ralloc.c: removed IS_OP_RUONLY + some cosmetic changes
	* src/SDCCast.c (resultTypePropagate): propagate for '!',
	  (decorateType): also optimize comparisons with RESULT_TYPE_BIT,
	  bugfix: only use newBoolLink for bit result type
	* src/SDCCicode.c (geniCodeLogic): added param tree,
	  bugfix: use newBoolLink if tree is bit type, bug appears when ruonly,
	  (geniCodeLogicAndOr): use IS_BIT,
	  (geniCodeJumpTable, geniCodeSwitch): added NULL param to geniCodeLogic,